Added a new paragraph of text

--- a/helloWorld.html
+++ b/helloWorld.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Cool Website</h1>
-    <p>Hello motherfuckers Im learning how to use Github</p>
+    <p>Im learning how to use Github</p>
+    <p>Please tell me what you think about this advance website</p>
 </body>
 </html>
